apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-w-1
      securityContext:
        runAsUser: 4000
        runAsGroup: 4000
        fsGroup: 4000
        supplementalGroups: [4000]
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
              readOnly: true
            - name: dri
              mountPath: /dev/dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          nfs:
            server: 192.168.120.4
            path: /mnt/sandbox/media
        - name: dri
          hostPath:
            path: /dev/dri
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 8096
      protocol: TCP
  selector:
    app: jellyfin
